--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,6 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import "bootstrap/dist/css/bootstrap.css";
+@import "pc-bootstrap4-datetimepicker/build/css/bootstrap-datetimepicker.css";
+
