--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,3 +18,13 @@
     float: left;
     padding: 5px;
 }
+ul.ul_error{
+    background: #ef3632;
+    color: #fff;
+    padding: 10px;
+}
+@media (min-width: 576px){
+    .modal-dialog {
+        max-width: 700px;
+    }
+}
