--- a/public/css/pdf.css
+++ b/public/css/pdf.css
@@ -35,6 +35,7 @@ table.content
 .table tr td,
 .content tr td{
     border: solid 1px #000000;
+    padding: 0 2px;
 }
 .font-20{
     font-size: 20px;
